# ProjectManagement

./: .env.example  .gitignore  CLAUDE.md  README.md  pm_phase1.sqlite3
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  errors.py  main.py
backend/app/agent/: runtime.py  tools.py  voice.py
backend/app/api/: deps.py
backend/app/api/routers/: auth.py  catalog.py  chat.py  comments.py  metrics.py  notifications.py  organizations.py  projects.py  search.py  security.py  tasks.py  teams.py  users.py  voice.py
backend/app/core/: rate_limit.py  security.py
backend/app/db/: base.py  engine.py  session.py
backend/app/models/: __init__.py  auth.py  chat.py  collab.py  enums.py  identity.py  platform.py  work.py
backend/app/schemas/: auth.py  core.py
backend/app/services/: audit.py  auth_service.py  authz.py  catalog_service.py  chat_service.py  comment_service.py  embedding_service.py  grants.py  messaging.py  metrics_service.py  notification_service.py  org_service.py  project_service.py  security_service.py  status_service.py  task_service.py  team_service.py  user_service.py
backend/mcp_server/: server.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_retrieval.py  0003_pat.py  0004_task_progress.py  0005_chat_history.py
backend/scripts/: reindex.py  smoke.py
backend/tests/: conftest.py  test_auth.py  test_chat_history.py  test_messaging.py  test_slice.py
docs/: ai-native-data-model.md  ai-native-system-design.md  ai-native-task-management-architecture.md  roadmap.md
(+52 files in other folders)
