[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pm-backend"
version = "0.1.0"
description = "AI-native task management — Phase 1 REST API (business logic + authz + audit)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "argon2-cffi>=23.1",
    "python-dotenv>=1.0",
    "google-genai>=1.0",
    "mcp>=1.0",
    "httpx>=0.27",
    "azure-communication-email>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "mcp_server*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
